--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,3 +31,11 @@ target 'ActOfVision-tvOS' do
     # Pods for testing
   end
 end
+
+post_install do |pi|
+    pi.pods_project.targets.each do |t|
+      t.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+      end
+    end
+end
