--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^1.4.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
