--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/ActOfVision/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
+    "build:android": "npx jetify && cd android && ./gradlew assembleRelease",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
